@@ -7,6 +7,7 @@
 * Qvalent: Adds support for standard stored credential framework [molbrown] #3227
 * Cybersource: Send tokenization data when card is :master [pi3r] #3230
 * Bluesnap: Omit state codes for unsupported countries [therufs] #3229
+* Adyen: Pass updateShopperStatement, industryUsage [curiousepic] #3233
 
 == Version 1.94.0 (May 21, 2019)
 * Mundipagg: Fix number lengths for both VR and Sodexo [dtykocki] #3195
